--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -131,7 +131,11 @@
     "account_heading_internal_addresses": "Adresses internes"
   },
   "settings": {
-    "title": "Paramètres",
+    "section_title_display": "Écran",
+    "section_title_market": "Marché",
+    "section_title_wallet": "Portefeuille",
+    "section_title_community": "Communauté",
+    "section_title_dev": "Développement & Documentation",
     "show_balance": "Afficher le solde",
     "hide_balance": "Cacher le solde",
     "use_sats": "Afficher les montants en sats",
@@ -144,9 +148,55 @@
     "show_seed": "Afficher la phrase graine",
     "hide_seed": "Cacher la phrase graine",
     "reveal_seed": "Révéler la phrase graine",
+    "show_logs": "Afficher les journaux",
+    "show_fee_config": "Ajuster les limites de frais",
+    "button_lock_wallet": "Verrouiller le Portefeuille",
+    "button_locking_wallet": "Verrouillant...",
+    "button_create_wallet": "Créer un nouveau portefeuille",
     "button_switch_wallet": "Changer de porte-monnaie",
     "error_loading_seed_failed": "Impossible de récupérer la phrase graine.",
-    "seed_modal_info_text": "Veuillez noter votre phrase graine et votre mot de passe ! Sans ces informations, vous ne serez pas en mesure d'accéder à votre portefeuille !"
+    "seed_modal_info_text": "Veuillez noter votre phrase graine et votre mot de passe ! Sans ces informations, vous ne serez pas en mesure d'accéder à votre portefeuille !",
+    "documentation": "Documentation",
+    "github": "GitHub",
+    "matrix": "Matrix",
+    "telegram": "Telegram",
+    "jm_twitter": "JoinMarket Twitter",
+    "jam_twitter": "Jam Twitter",
+    "confirm_locking_modal_title": "Verrouiller le Portefeuille",
+    "confirm_locking_modal_body_earn": "Earn is active. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
+    "confirm_locking_modal_body_jam": "A collaborative transaction is being executed. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
+    "fees": {
+      "title": "Fee Limits",
+      "description": "Adjust mining fees and collaborator fees according to your needs. Mining fees relate to transaction priority and depend on mempool conditions. Collaborator fees relate to liquidity price and depend on market conditions. Total fees paid for each transaction depend on the amount of collaborators. Additional collaborators increase privacy, but also fees. These settings will be reset to default values when the JoinMarket service restarts, e.g. on a system reboot. For more information, <1>see the documentation on fees</1>.",
+      "title_general_fee_settings": "Mining fees",
+      "radio_tx_fees_blocks": "Block target",
+      "radio_tx_fees_satspervbyte": "sats/vByte",
+      "label_tx_fees": "Transaction base fee",
+      "description_tx_fees_blocks": "When using the block target setting, Jam will use Bitcoin Core's fee estimation mechanism to set the base fee dynamically, depending on mempool activity. Default: 3.",
+      "description_tx_fees_satspervbyte": "Setting the base fee in sats/vByte will override the block target setting. Check your mempool to set this fee accordingly.",
+      "feedback_invalid_tx_fees_blocks": "Please provide a valid block target between {{ min }} and {{ max }}.",
+      "feedback_invalid_tx_fees_satspervbyte": "Please provide a valid transaction fee in sats/vByte between {{ min }} and {{ max }}.",
+      "label_tx_fees_factor": "Fee randomization",
+      "description_tx_fees_factor": "Random fees improve privacy. The percentage is to be understood as a +/- around the base fee. Example: If you set the base fee to 10 sats/vByte and the randomization to 30%, a value between 7 and 13 sats/vByte will be used. Default: 20%.",
+      "feedback_invalid_tx_fees_factor": "Please provide a valid fee randomization value between {{ min }} and {{ max }}.",
+      "title_max_cj_fee_settings": "Collaborator fees",
+      "subtitle_max_cj_fee": "Note: An offer will be rejected only if both limits are exceeded.",
+      "label_max_cj_fee_abs": "Absolute limit (per collaborator)",
+      "description_max_cj_fee_abs": "The maximum fee you are willing to pay per collaborator. Example: when set to 3,000 sats, the maximum fee in total would be 27,000 sats when using the default of 9 collaborators.",
+      "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum absolute fee in sats between {{ min }} and {{ max }}.",
+      "label_max_cj_fee_rel": "Relative limit (per collaborator)",
+      "description_max_cj_fee_rel": "The maximum fee you are willing to pay per collaborator, as a percentage of the transaction amount. Example: if you send 2 million sats and the maximum fee is set to 0.1%, you will at most pay 2,000 sats to a single collaborator.",
+      "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee between {{ min }} and {{ max }}.",
+      "text_button_cancel": "Annuler",
+      "text_button_submit": "Sauvegarder",
+      "text_button_submitting": "Sauvant...",
+      "error_loading_fee_config_failed": "Error while loading fee config values. ",
+      "error_saving_fee_config_failed": "Error while saving fee config values. Reason: {{ reason }}"
+    }
+  },
+  "logs": {
+    "title": "Logs",
+    "error_loading_logs_failed": "Could not retrieve log file."
   },
   "send": {
     "loading": "Chargement",
