--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -150,7 +150,7 @@
     "reveal_seed": "Révéler la phrase graine",
     "show_logs": "Afficher les journaux",
     "show_fee_config": "Ajuster les limites de frais",
-    "button_lock_wallet": "Verrouiller le Portefeuille",
+    "button_lock_wallet": "Verrouiller le portefeuille",
     "button_locking_wallet": "Verrouillant...",
     "button_create_wallet": "Créer un nouveau portefeuille",
     "button_switch_wallet": "Changer de porte-monnaie",
