--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -554,11 +554,11 @@
   "jar_details": {
     "title_tab_utxos": "UTXOs",
     "title_tab_jar_details": "Details",
-    "total_label": "<0></0> total",
     "utxo_list": {
       "title_zero": "No UTXOs in Jar {{ jar }}",
       "title_one": "{{ count }} UTXO in Jar {{ jar }}",
       "title_other": "{{ count }} UTXOs in Jar {{ jar }}",
+      "text_balance_sum_total": "<0></0> total",
       "text_balance_sum_selected": "<0></0> selected",
       "button_freeze": "Freeze",
       "button_unfreeze": "Unfreeze",
