ui(UtxoList): shorten fb tag by moving locktime to toolip

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -564,8 +564,9 @@
       "button_unfreeze": "Unfreeze",
       "button_freeze_loading": "Freezing...",
       "button_unfreeze_loading": "Unfreezing...",
+      "utxo_tooltip_locktime": "locked until {{ locktime }}",
       "utxo_tag_frozen": "frozen",
-      "utxo_tag_locktime": "locked until {{ locktime }}",
+      "utxo_tag_locked": "locked",
       "column_title_balance": "Value",
       "column_title_address": "Address",
       "column_title_confirmations": "Confs.",
