--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -566,7 +566,7 @@
       "button_unfreeze_loading": "Unfreezing...",
       "utxo_tooltip_locktime": "locked until {{ locktime }}",
       "utxo_tag_frozen": "frozen",
-      "utxo_tag_locked": "locked",
+      "utxo_tag_fb": "bond",
       "column_title_balance": "Value",
       "column_title_address": "Address",
       "column_title_confirmations": "Confs.",
