--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -79,12 +79,12 @@
       "subtitle": "The source of the error could not be determined."
     },
     "error_with_details": {
-      "title": "An error has been encountered : (",
+      "title": "Something broke :(",
       "subtitle": ""
     },
-    "heading_reason": "Reason",
-    "heading_stacktrace": "Stacktrace",
-    "report_bug": "Please, <2>open an issue on GitHub</2> for this to be reviewed and for the error to be resolved in an upcoming version."
+    "heading_reason": "Reason:",
+    "heading_stacktrace": "Stacktrace:",
+    "report_bug": "Please <2>open an issue on GitHub</2> for this error to be reviewed and resolved in an upcoming version."
   },
   "wallets": {
     "title": "Your Wallets",
