--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -260,6 +260,17 @@
     "sweep_amount_breakdown_frozen_balance": "Frozen or locked balance",
     "sweep_amount_breakdown_estimated_amount": "Estimated amount to be sent",
     "sweep_amount_breakdown_explanation": "A sweep transaction will consume all UTXOs of a mixdepth leaving no coins behind except those that have been <1>frozen</1> or <3>time-locked</3>. Onchain transaction fees and market maker fees will be deducted from the amount so as to leave zero change. The exact transaction amount can only be calculated by JoinMarket at the point when the transaction is made. Therefore the estimated amount shown might deviate from the actually sent amount. Refer to the <5>JoinMarket documentation</5> for more details.",
+    "fee_breakdown": {
+      "or": "or",
+      "plus": "plus",
+      "counterparties_multiplied": "Counterparties <b>multiplied by...</b>",
+      "random_absolute_limit": "Absolute fee limit, chosen randomly",
+      "personal_absolute_limit": "<b>Your personal</b> absolute fee limit (if set, change <a>here</a>)",
+      "random_relative_limit": "Relative fee limit, chosen randomly",
+      "personal_relative_limit": "<b>Your personal</b> relative fee limit (if set, change <a>here</a>)",
+      "miner_fee": "Miner fee ({{amount}} sat/VB, change <a>here</a>)",
+      "total_estimate": "Very rough estimated total collaborative transaction fees"
+    },
     "confirm_send_modal": {
       "title": "Confirm payment",
       "label_amount": "Amount",
