--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -91,6 +91,7 @@
     "subtitle_no_wallets": "It looks like you do not have a wallet, yet.",
     "text_loading": "Loading wallets",
     "button_new_wallet": "Create new wallet",
+    "button_import_wallet": "Import existing wallet",
     "alert_wallet_open": "There can be only one active wallet. If you want to open another wallet, please lock '{{ currentWalletName }}' first.",
     "error_loading_failed": "Loading wallets failed.",
     "wallet_preview": {
